[tool.poetry]
name = "kvstore"
version = "0.1.0"
description = "Интерактивное in-memory key-value хранилище с транзакциями (на русском языке)"
authors = ["Your Name <your@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = {version = "^8.4.1", python = "^3.10"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
